{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 277,
  "lineage": "ff6026a2-1f6e-2d0f-476e-c5c845b9bf97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:internet-gateway/igw-0b6febd1ed139e509",
            "id": "igw-0b6febd1ed139e509",
            "owner_id": "025066279968",
            "tags": {
              "Name": "Web-gateway"
            },
            "tags_all": {
              "Name": "Web-gateway"
            },
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:loadbalancer/app/Web-load-balancer/329ebbc1ecd288c0",
            "arn_suffix": "app/Web-load-balancer/329ebbc1ecd288c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-load-balancer-1945548457.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:loadbalancer/app/Web-load-balancer/329ebbc1ecd288c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-068bda814324fef30"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a5dbd2fcbb9d8a7"
              },
              {
                "subnet_id": "subnet-03c2675c0f88d475d"
              },
              {
                "subnet_id": "subnet-0faced24aaeff68aa"
              }
            ],
            "subnets": [
              "subnet-01a5dbd2fcbb9d8a7",
              "subnet-03c2675c0f88d475d",
              "subnet-0faced24aaeff68aa"
            ],
            "vpc_id": "vpc-03b9cfe96d5ab5907",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-eu-west-3a",
            "aws_subnet.subnet-eu-west-3b",
            "aws_subnet.subnet-eu-west-3c",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:listener/app/Web-load-balancer/329ebbc1ecd288c0/c8dd4d9ec8cf03d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:targetgroup/Web-target-group/9f24a2d1f4a5f7b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:listener/app/Web-load-balancer/329ebbc1ecd288c0/c8dd4d9ec8cf03d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:loadbalancer/app/Web-load-balancer/329ebbc1ecd288c0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-load-balancer",
            "aws_lb_target_group.web-target-group",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-eu-west-3a",
            "aws_subnet.subnet-eu-west-3b",
            "aws_subnet.subnet-eu-west-3c",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:targetgroup/Web-target-group/9f24a2d1f4a5f7b9",
            "arn_suffix": "targetgroup/Web-target-group/9f24a2d1f4a5f7b9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:025066279968:targetgroup/Web-target-group/9f24a2d1f4a5f7b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:route-table/rtb-0110ea70a5646f093",
            "id": "rtb-0110ea70a5646f093",
            "owner_id": "025066279968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6febd1ed139e509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Web-route-table"
            },
            "tags_all": {
              "Name": "Web-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556fb4b868dc1791",
            "route_table_id": "rtb-0110ea70a5646f093",
            "subnet_id": "subnet-0faced24aaeff68aa"
          },
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_route_table.web-route-table",
            "aws_subnet.subnet-eu-west-3a",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819aebe68c6815c2",
            "route_table_id": "rtb-0110ea70a5646f093",
            "subnet_id": "subnet-01a5dbd2fcbb9d8a7"
          },
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_route_table.web-route-table",
            "aws_subnet.subnet-eu-west-3b",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c0d7b07d5923876",
            "route_table_id": "rtb-0110ea70a5646f093",
            "subnet_id": "subnet-03c2675c0f88d475d"
          },
          "dependencies": [
            "aws_internet_gateway.web-gateway",
            "aws_route_table.web-route-table",
            "aws_subnet.subnet-eu-west-3c",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:security-group/sg-068bda814324fef30",
            "description": "Allow inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068bda814324fef30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow_web_traffic",
            "name_prefix": "",
            "owner_id": "025066279968",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:subnet/subnet-0faced24aaeff68aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faced24aaeff68aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025066279968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-eu-west-3a"
            },
            "tags_all": {
              "Name": "Subnet-eu-west-3a"
            },
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:subnet/subnet-01a5dbd2fcbb9d8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a5dbd2fcbb9d8a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025066279968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-eu-west-3b"
            },
            "tags_all": {
              "Name": "Subnet-eu-west-3b"
            },
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:subnet/subnet-03c2675c0f88d475d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2675c0f88d475d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025066279968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-eu-west-3c"
            },
            "tags_all": {
              "Name": "Subnet-eu-west-3c"
            },
            "vpc_id": "vpc-03b9cfe96d5ab5907"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:025066279968:vpc/vpc-03b9cfe96d5ab5907",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e61b5938ae55a52",
            "default_route_table_id": "rtb-001cd980efc7e426b",
            "default_security_group_id": "sg-0e18ee8dbe88ead50",
            "dhcp_options_id": "dopt-0d78e0bac34c199d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b9cfe96d5ab5907",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001cd980efc7e426b",
            "owner_id": "025066279968",
            "tags": {
              "Name": "Web-vpc"
            },
            "tags_all": {
              "Name": "Web-vpc"
            }
          }
        }
      ]
    }
  ]
}